# docs/swagger.json
@@ -6,6 +6,24 @@
         "version": "0.1.0"
     },
     "paths": {
+        "/api/v1/admin/projects/report": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/admin.ListReportProjectsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/dashboard/stats/all": {
             "get": {
                 "produces": [
@@ -407,6 +425,54 @@
         }
     },
     "definitions": {
+        "admin.ListReportProjectsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/admin.ListReportProjectsResponseData"
+                },
+                "error_msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "admin.ListReportProjectsResponseData": {
+            "type": "object",
+            "properties": {
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/admin.ListReportProjectsResponseDataResult"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "admin.ListReportProjectsResponseDataResult": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "dashboard.DashboardDataResponse": {
             "type": "object",
             "properties": {
